<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="16dp"
    >

    <Button
        android:id="@+id/colorDocumentFilter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/filter_color_document"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorDocumentFilter" />

    <Button
        android:id="@+id/grayscaleFilter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/filter_grayscale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colorDocumentFilter" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grayscaleFilter" />

    <Button
        android:id="@+id/binarizationFilter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/filter_binarization"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/grayscaleFilter" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/binarizationFilter" />

    <Button
        android:id="@+id/whiteBlackPointFilter"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/filter_white_black_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/binarizationFilter" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whiteBlackPointFilter" />

    <Button
        android:id="@+id/filterNone"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/filter_none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whiteBlackPointFilter" />
</androidx.constraintlayout.widget.ConstraintLayout>
