<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp">

    <Button
        android:id="@+id/save_pdf"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_prf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

    <Button
        android:id="@+id/save_tiff"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_tiff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

    <Button
        android:id="@+id/save_jpeg"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_jpeg"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#1effffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

    <Button
        android:id="@+id/save_png"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/save_png"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_pdf" />

</LinearLayout>